tests/ui_board/snapshots/ui_board__top_boundary_snapshots__top_boundary_blank_and_cursor_are_immediately_visible.snap
---
source: tests/ui_board/top_boundary_snapshots.rs
assertion_line: 22
expression: snapshot_buffer(terminal.backend().buffer())
---
SIZE 38x8

TEXT
00│⋮│
01│  ────────────────────────────────────│
02│  Former first thought wraps across a│
03│  narrow pane with Grüße and 界 .│
04││
05│  proqi-ui-contract│
06│  2 thoughts · edit · saving│
07│  Esc Board│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-37 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-37 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
2: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-37 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-29 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 30-30 fg=Reset bg=Reset mod=NONE | 31-37 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-37 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-37 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-35 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 36-37 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-37 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
