tests/ui_board/snapshots/ui_board__top_boundary_snapshots__top_boundary_shallow_responsive_density@portable.snap
---
source: tests/ui_board/top_boundary_snapshots.rs
assertion_line: 192
expression: "snapshot_buffer(draw_theme(&mut shallow, 60, 8,\nThemePreference::Dark).backend().buffer())"
---
SIZE 60x8

TEXT
00│⋮│
01│  ──────────────────────────────────────────────────────────│
02│  alpha│
03│  ──────────────────────────────────────────────────────────│
04││
05│  proqi-ui-contract│
06│  5 thoughts · edit · saving│
07│  Esc Board  Ctrl+C Copy Ctrl+X Cut Ctrl+Z Undo│

STYLE RUNS
0: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-59 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
1: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-59 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
2: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-59 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
4: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-57 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 58-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-24 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 25-30 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 31-35 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 36-41 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 42-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
