tests/ui_board/snapshots/ui_board__top_boundary_snapshots__top_boundary_standard_density@portable.snap
---
source: tests/ui_board/top_boundary_snapshots.rs
assertion_line: 155
expression: "snapshot_buffer(draw_theme(&mut standard, 60, 17,\nThemePreference::Dark).backend().buffer())"
---
SIZE 60x17

TEXT
00││
01│⋮│
02│  ──────────────────────────────────────────────────────────│
03││
04│  alpha│
05│  ──────────────────────────────────────────────────────────│
06││
07│  beta│
08│  ──────────────────────────────────────────────────────────│
09││
10│  gamma│
11││
12││
13││
14│  proqi-ui-contract│
15│  5 thoughts · edit · saving│
16│  Esc Board  Ctrl+C Copy Ctrl+X Cut Ctrl+Z Undo│

STYLE RUNS
0: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-59 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
2: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-59 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
3: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-59 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
6: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
7: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-59 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
9: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
13: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
14: 0-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
15: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-57 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 58-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
16: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-4 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 5-12 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 13-18 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 19-24 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 25-30 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 31-35 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 36-41 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 42-59 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
